# programming-project-commedescode

./: README.md
birb/: CMakeLists.txt
birb/include/: Emitter.h  MainWindow.h  NGLScene.h  WindowParams.h  flock.h
birb/shaders/: ParticleFragment.glsl  ParticleVertex.glsl  birbFragment.glsl  birbVertex.glsl
birb/src/: Emitter.cpp  MainWindow.cpp  NGLScene.cpp  NGLSceneMouseControls.cpp  flock.cpp  main.cpp
birb/ui/: MainWindow.ui
